[project]
name = "auto-seo"
version = "0.1.0"
description = "Generate seo content (title, description, keywords) for blog post with AI, support blog framework like Hexo, Hugo, etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "python-frontmatter>=1.1.0",
]

